@@ -1,4 +1,4 @@
-.TH OTPW-GEN 1 "2003-09-30"
+.TH OTPW-GEN 1 "2004-03-28"
 .SH NAME
 otpw-gen \- one-time password generator
 .SH SYNOPSIS
@@ -109,15 +109,20 @@ file, the value should be at least 48. Paranoid users might prefer
 long high-security passwords with at least 60 bits of entropy.
 (Default: 48)
 .TP
-.BI \-p0
+.BI \-p 0
 Generate passwords by transforming a random bit string into a sequence
 of letters and digits, using a form of base-64 encoding (6 bits per
 character). (Default)
 .TP
-.BI \-p1
+.BI \-p 1
 Generate passwords by transforming a random bit string into a sequence
 of English four-letter words, each chosen from a fixed list of 2048
 words (2.75 bits per character).
+.TP
+.BI \-p 2
+Generate passwords by transforming a random bit string into a sequence
+of lowercase letters and digits (5 bits per character). These are easier
+to communicate by voice (e.g., using the NATO alphabet).
 .TP
 .BI \-f " filename"
 Specify a file to be used instead of
@@ -130,9 +135,33 @@ This reduces the minimum value for option
 .I \-h
 to 1.
 .TP
-.BI \-o
-Suppress the random reordering of passwords. With this option,
-passwords will be requested in the order printed on the paper.
+.BI \-m
+Instead of generating each password randomly, generate a random
+.I master key
+and then derive each password from that in a deterministic way.  The
+master key will be printed to standard error. It can later be used
+with option
+.I \-k
+to recreate another copy of the same one-time password list. (Each
+password is generated from the output of a secure hash function
+applied to the master key and the challenge string.)
+.TP
+.BI \-E " number"
+Specify the minimum entropy of the master key in bits. (It contains in
+addition four bits redundancy for error checking.)
+.TP
+.BI \-P " number"
+Choose the text format in which the master key will be displayed.
+The supported values are the same as with option
+.IR \-p .
+.TP
+.BI \-k
+Ask for a master key, as it was generated by option
+.IR -m ,
+and then recreate the same password list from that. With this option,
+only a password list will be generated; the hash values in
+.I ~/.otpw
+remain unmodified.
 .TP
 .BI \-r
 Output a suggestion for a random password, then exit. The length and
