@@ -41,4 +41,8 @@ Changes in version 1.4 (2004-03-??)
 
   - new option -r suggests one random password to stdout, then exists
 
-  - ...
+  - new option -m to generate passwords from a single randomly generated
+    key, which will be printed to stderr.
+
+  - new option -k to recreate a password list from a master key generated
+    with -m. This does not affect the ~/.otpw file.
